# file-watch

./: .env  Cargo.toml  Event.txt  LICENSE  Readme.md  auto_input.ini  config.ini  info.txt  log4rs.yml  log4rs.yml.bak  程序功能介紹.docx
src/: cobra.rs  keyboard_monitor.rs  lib.rs  main.rs  process_monitor.rs  screen_monitor.rs  session.rs  structs.rs  tests.rs
