[package]
name = "file-watch"
version = "0.1.3"
edition = "2021"
authors = ["Terry.He < HL928452957@gmail.com >"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotwatch = "0.4.6"
log4rs ="1.2.0"
log = "0.4.17"
[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
