[package]
name = "file-watch"
version = "0.2.0"
edition = "2021"
authors = ["Terry.He < HL928452957@gmail.com >"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotwatch = "0.4.6"
log4rs ="1.2.0"
log = "0.4.17"
regex="1.7.0"
self_update="0.32.0"
tempfile = "3.3.0"
chrono="0.4.19"
evtx="0.8.1"
hostname="^0.3"
platform-dirs="0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
config = "0.13.2"
dotenv = "0.15.0"
encoding = "0.2.33" # for GBK encoding
[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
lto = true